--- a/index.html
+++ b/index.html
@@ -328,6 +328,8 @@ For this project you must turn in both your code and a project webpage as descri
   <br>
   <img src="WebImage29.png" style="color:blue; width:70%">
   <br>
+  <h3 style="color:blue; max-width:70%">NOTE: "part1.1.py" will not generate the 8 horizontal Laplacian stacks below, these were interesting results (and therefore included) from experimenting with normalization, k-size and sigma size, and visual enhancements with a constant value. The code that generated these is now broken and commented out.</h3>
+  <br>
   <h3 style="color:blue; max-width:70%; color:blue; max-width:70%; border-style: solid; border-width: 5px; border-color:orange; background-color:pink; font-variant: normal;">DESCRIPTION: All Laplacian stacks shown below (except for those the resemble figure 3.42) will be enhanced by 0.4 (out of max 1) if they are not normalized. This is a normalized Laplacian stack, which means the images generated at each step are taken and normalized using the method (value - min) / (max - min). The resizing k-value means that the kernel size grows with each iteration to filter out more frequencies for more visibility. </h3>
   <br>
   <img src="WebImage30.png" style="color:blue; width:70%">
